docs/api/qiskit/0.44/index.mdx
---
title: qiskit
description: API reference for qiskit
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit
---

<span id="module-qiskit" />

# API Reference

*   [Quantum Circuits (`qiskit.circuit`)](circuit)
*   [Circuit Library (`qiskit.circuit.library`)](circuit_library)
*   [Classical expressions (`qiskit.circuit.classical`)](circuit_classical)
*   [Compilation Routines (`qiskit.compiler`)](compiler)
*   [Executing Experiments (`qiskit.execute_function`)](execute)
*   [Visualizations (`qiskit.visualization`)](visualization)
*   [ClassicalFunction compiler (`qiskit.circuit.classicalfunction`)](classicalfunction)
*   [Circuit Converters (`qiskit.converters`)](converters)
*   [Circuit and Schedule Assembler (`qiskit.assembler`)](assembler)
*   [DAG Circuits (`qiskit.dagcircuit`)](dagcircuit)
*   [Quantum Circuit Extensions (`qiskit.extensions`)](extensions)
*   [BasicAer: Python-based Simulators (`qiskit.providers.basicaer`)](providers_basicaer)
*   [Providers Interface (`qiskit.providers`)](providers)
*   [Writing a New Provider](providers#writing-a-new-provider)
*   [Migrating between Backend API Versions](providers#migrating-between-backend-api-versions)
*   [Fake Provider (`qiskit.providers.fake_provider`)](providers_fake_provider)
*   [Backend Objects (`qiskit.providers.models`)](providers_models)
*   [Pulse (`qiskit.pulse`)](pulse)
*   [Circuit Scheduler (`qiskit.scheduler`)](scheduler)
*   [Circuit Synthesis (`qiskit.synthesis`)](synthesis)
*   [Primitives (`qiskit.primitives`)](primitives)
*   [OpenQASM 2 (`qiskit.qasm2`)](qasm2)
*   [OpenQASM 3 (`qiskit.qasm3`)](qasm3)
*   [Qasm (`qiskit.qasm`)](qasm)
*   [Qobj (`qiskit.qobj`)](qobj)
*   [QPY serialization (`qiskit.qpy`)](qpy)
*   [Quantum Information (`qiskit.quantum_info`)](quantum_info)
*   [Experiment Results (`qiskit.result`)](result)
*   [Qiskit Tools (`qiskit.tools`)](tools)
*   [Jupyter Tools (`qiskit.tools.jupyter`)](tools_jupyter)
*   [Transpiler (`qiskit.transpiler`)](transpiler)
*   [Transpiler Passes (`qiskit.transpiler.passes`)](transpiler_passes)
*   [Preset Passmanagers (`qiskit.transpiler.preset_passmanagers`)](transpiler_preset)
*   [Transpiler Stage Plugin Interface (`qiskit.transpiler.preset_passmanagers.plugin`)](transpiler_plugins)
*   [Synthesis Plugins (`qiskit.transpiler.passes.synthesis.plugin`)](transpiler_synthesis_plugins)
*   [Built-in Transpiler Synthesis Plugins](transpiler_builtin_plugins)
*   [Utilities (`qiskit.utils`)](utils)
*   [Measurement Mitigation Utils (`qiskit.utils.mitigation`)](utils_mitigation)
*   [Operators (`qiskit.opflow`)](opflow)
*   [Algorithms (`qiskit.algorithms`)](algorithms)
*   [Top-level exceptions (`qiskit.exceptions`)](exceptions)

